--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -6,4 +6,13 @@ html(lang="ja")
     title Index
   body
     h1 Public
+    button.btn.btn-primary(type='button') Primary
+    button.btn.btn-secondary(type='button') Secondary
+    button.btn.btn-success(type='button') Success
+    button.btn.btn-danger(type='button') Danger
+    button.btn.btn-warning(type='button') Warning
+    button.btn.btn-info(type='button') Info
+    button.btn.btn-light(type='button') Light
+    button.btn.btn-dark(type='button') Dark
+    button.btn.btn-link(type='button') Link
   script(src="main.js") 
