--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -3,6 +3,7 @@ html(lang="ja")
   head 
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    link(rel='stylesheet' href='style.css')
     title Index
   body
     h1 Public
