--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -21,4 +21,6 @@ html(lang="ja")
         span.input-group-text My-ID/Peer-ID
       input.form-control#my-id(type='text' placeholder='My-ID')
       input.form-control#peer-id(type='text' placeholder='Peer-ID')
+    video#v01(width='300px' autoplay muted playsinline)
+    video#v02(width='300px' autoplay muted playsinline)
   script(src="main.js") 
