配置見直し

--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -21,6 +21,6 @@ html(lang="ja")
         span.input-group-text My-ID/Peer-ID
       input.form-control#my-id(type='text' placeholder='My-ID')
       input.form-control#peer-id(type='text' placeholder='Peer-ID')
-      button.btn.btn-primary#append-display(type='button') メディア追加
-    .embed-responsive.embed-responsive-16by9#video-area
+    button.btn.btn-primary#append-display(type='button') メディア追加
+    .row#video-area
   script(src="main.js") 
