--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -22,5 +22,5 @@ html(lang="ja")
       input.form-control#my-id(type='text' placeholder='My-ID')
       input.form-control#peer-id(type='text' placeholder='Peer-ID')
     button.btn.btn-primary#append-display(type='button') メディア追加
-    .row#video-area
+    .row.w-100#video-area
   script(src="main.js") 
