映像をフォーカス

--- a/src/views/index-pub.pug
+++ b/src/views/index-pub.pug
@@ -23,5 +23,5 @@ html(lang="ja")
       input.form-control#peer-id(type='text' placeholder='Peer-ID')
     button.btn.btn-primary#append-display(type='button') メディア追加
     .row.w-100#video-area
-    .row.w-100#zoom-area
+    .row.w-100#focus-area
   script(src="main.js") 
